@@ -1,3 +1,7 @@
+= Unreleased =
+# Improved
+- Added that Omniva delivery methods would not be displayed if the dimensions of the cart exceed the maximum dimensions specified in the carrier's settings
+
 = 2.0.20 =
 # Fixed
 - Removed unused hook from list of registered hooks
